--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -1,11 +1,8 @@
 version: "2"
 sql:
-  - schema: "sql/schema"
+  - engine: "sqlite"
     queries: "sql/queries"
-    engine: "sqlite"
+    schema: "sql/schema"
     gen:
       go:
         out: "internal/database"
-        overrides:
-          - db_type: "pg_catalog.numeric"
-            go_type: "float64"
