--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,6 +11,7 @@ jobs:
 
     env:
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      TAUTH_TOKEN: ${{secrets.TAUTH_TOKEN}}
 
     steps:
       - name: Check out code
