--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -46,4 +46,4 @@ jobs:
         run: ./scripts/migrateup.sh
 
       - name: Deploy to Cloud Run
-        run: gcloud run deploy notely --image africa-south1-docker.pkg.dev/kenyan-locations-api/kenyan-locations-ar/kenyan_locations:latest --region africa-south1  --allow-unauthenticated --project linear-reporter-454220-n3 --max-instances=4
+        run: gcloud run deploy notely --image africa-south1-docker.pkg.dev/kenyan-locations-api/kenyan-locations-ar/kenyan_locations:latest --region africa-south1  --allow-unauthenticated --project kenyan-locations-api --max-instances=4
